fixing nav white space

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 2.8rem 16.5rem;
+  padding: 1.6rem 16.5rem;
 }
 
 .logo {
